<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/logTransacoes"
        android:orderInCategory="300"
        android:icon="@drawable/adm"
        android:title="@string/log_de_transacoes"
        app:showAsAction="ifRoom"></item>

    <item
        android:id="@+id/desfazimento"
        android:orderInCategory="300"
        android:icon="@drawable/adm"
        android:title="@string/desfazimento"
        app:showAsAction="ifRoom"></item>

    <item
        android:id="@+id/cancelar"
        android:orderInCategory="300"
        android:icon="@drawable/adm"
        android:title="@string/cancelamento"
        app:showAsAction="ifRoom"></item>

    <item
        android:id="@+id/config"
        android:orderInCategory="300"
        android:icon="@drawable/adm"
        android:title="@string/configuracao"
        app:showAsAction="ifRoom"></item>

    <item
        android:id="@+id/param"
        android:orderInCategory="300"
        android:icon="@drawable/adm"
        android:title="@string/parametrizar"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/licenca"
        android:orderInCategory="300"
        android:icon="@drawable/adm"
        android:title="@string/licenca"
        app:showAsAction="ifRoom"></item>
    <item
        android:id="@+id/telecarga"
        android:orderInCategory="300"
        android:icon="@drawable/adm"
        android:title="@string/telecarga"
        app:showAsAction="ifRoom"></item>

</menu>